# Crosshair

./: .gitignore  crosshair.py  外置准星.spec
cpp/: CMakeLists.txt  config.cpp  config.h  main.cpp  make_icon.ps1  overlay.cpp  overlay.h  render.cpp  render.h  resource.h  run.bat  settings.cpp  settings.h
